[Refactor] Reordered CSS: moved browser styles cleanup forward

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,28 @@
   box-sizing: border-box;
 }
 
+h1,
+h2,
+h3,
+h4,
+p,
+ul,
+ol,
+li,
+blockquote,
+fieldset,
+body {
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
+ul,
+ol {
+  list-style: none;
+}
+
+
 html {
   block-size: 100%;
 }
@@ -18,21 +40,3 @@ html {
   background-color: #1b1919;
 }
 
-h1,
-h2,
-h3,
-h4,
-p,
-ul,
-ol,
-li,
-blockquote,
-fieldset {
-  margin: 0;
-  padding: 0;
-}
-
-ul,
-ol {
-  list-style: none;
-}
