--- a/styles/style.css
+++ b/styles/style.css
@@ -268,7 +268,7 @@ html
   block-size: 22px;
   margin-inline-end: 5px;
   background-color: transparent;
-  border: 1px inset currentColor;
+  border: 1px solid currentColor;
 }
 
 .search-form__checkbox + .search-form__pseudo-checkbox::before
@@ -278,7 +278,7 @@ html
   inline-size: 15px;
   block-size: 15px;
   background-color: transparent;
-  border: 1px outset transparent;
+  border: 1px solid transparent;
   transition: all 0.5s ease-in-out;
 }
 
@@ -326,7 +326,7 @@ html
   display: block;
   block-size: 36px;
   background-color: transparent;
-  border: 1px inset currentColor;
+  border: 1px solid currentColor;
   padding: 6px 0;
   color: inherit;
   font-family: inherit;
